viewClients.cshtml done

--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -29,7 +29,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Clients" asp-action="Clients">
+                    <a class="nav-link" asp-controller="Clients" asp-action="ViewClients">
                         <i class="fas fa-user-friends"></i>
                         <span class="nav-link-text">Clients</span>
                     </a>
