--- a/Gym Web Application/Gym Web Application/Views/Home/Dashboard.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Home/Dashboard.cshtml
@@ -14,7 +14,7 @@
                                 <h3 class="mb-0">Recent Clients</h3>
                             </div>
                             <div class="col text-right">
-                                <a class="btn btn-sm btn-primary" asp-controller="Clients" asp-action="Clients">See
+                                <a class="btn btn-sm btn-primary" asp-controller="Clients" asp-action="ViewClients">See
                                     all</a>
                             </div>
                         </div>
@@ -138,3 +138,5 @@
                 </div>
             </div>
         </div>
+</div>
+</div>
