Classes and Clients done

--- a/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
@@ -15,7 +15,7 @@
                             <input class="table-search-bar" placeholder="Search for Client">
                         </div>
                         <div class="col text-right">
-                            <a class="btn-add" asp-controller="Clients" asp-action="Clients">Add Client</a>
+                            <a class="btn-add" asp-controller="Clients" asp-action="AddClients">Add Client</a>
                         </div>
                     </div>
                 </div>
