--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Classes" asp-action="Classes">
+                    <a class="nav-link" asp-controller="Classes" asp-action="ViewClasses">
                         <i class="bx bx-dumbbell"></i>
                         <span class="nav-link-text">Classes</span>
                     </a>
