Packages and Employees done

--- a/Gym Web Application/Gym Web Application/Views/Classes/AssignClasses.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Classes/AssignClasses.cshtml
@@ -85,4 +85,4 @@
                 </div>
             </div>
         </div>
-        <script src="~/js/assignClass.css"></script>
+        <script src="~/js/assignClass.js"></script>
