--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -35,13 +35,13 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Employees" asp-action="Employees">
+                    <a class="nav-link" asp-controller="Employees" asp-action="ViewEmployees">
                         <i class="fas fa-id-badge"></i>
                         <span class="nav-link-text">Employees</span>
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Packages" asp-action="Packages">
+                    <a class="nav-link" asp-controller="Packages" asp-action="ViewPackages">
                         <i class="fas fa-cog"></i>
                         <span class="nav-link-text">Packages</span>
                     </a>
