--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -47,7 +47,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Memberships" asp-action="Memberships">
+                    <a class="nav-link" asp-controller="Memberships" asp-action="ViewMemberships">
                         <i class="bx bxs-universal-access" style="color: #ffffff"></i>
                         <span class="nav-link-text">Memberships</span>
                     </a>
