Services and login employee added

--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -71,7 +71,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Home" asp-action="Logout">
+                    <a class="nav-link" asp-controller="Home" asp-action="Login">
                         <i class="fa fa-lock text-danger"></i>
                         <span class="nav-link-text">Log out</span>
                     </a>
