--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -65,7 +65,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Attendance" asp-action="Attendance">
+                    <a class="nav-link" asp-controller="Attendance" asp-action="ViewAttendance">
                         <i class="fa fa-desktop"></i>
                         <span class="nav-link-text">Attendance Tracking</span>
                     </a>
