--- a/Gym Web Application/Gym Web Application/Views/Clients/AddClients.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Clients/AddClients.cshtml
@@ -1,49 +1,43 @@
 @{
     ViewData["Title"] = "Clients";
 }
+@model Gym_Web_Application.Models.ClientModel
 
 <div class="container-fluid pt-3">
     <div class="row removable">
         <div class="col-lg">
             <div class="user-form">
                 <h1>Add a Client</h1>
-                <form method="POST" class="add-client">
+                <form method="POST" class="AddClients">
                     <div>
-                        <input class="add-user-input" type="text" placeholder="First Name" />
+                        <input class="add-user-input" type="text" placeholder="First Name" asp-for="FirstName"/>
                     </div>
                     <span id="fname-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Last Name" />
+                        <input class="add-user-input" type="text" placeholder="Last Name" asp-for="LastName"/>
                     </div>
                     <span id="lname-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Age" />
+                        <input class="add-user-input" type="text" placeholder="Age" asp-for="Age"/>
                     </div>
                     <span id="age-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Phone Number" />
+                        <input class="add-user-input" type="text" placeholder="Phone Number" asp-for="PhoneNumber"/>
                     </div>
                     <span id="phoneno-error" class="error-message"></span>
                     <br>
-                    <div>
-                        <input class="add-user-input" type="text" placeholder="Weight" />
-                    </div>
                     <br>
-                    <div>
-                        <input class="add-user-input" type="text" placeholder="Height" />
-                    </div>
-                    <br>
-                    <select class="add-user-input">
+                    <select class="add-user-input" asp-for="Gender">
                         <option value="">Gender</option>
                         <option value="female">Female</option>
                         <option value="male">Male</option>
                     </select>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Email" />
+                        <input class="add-user-input" type="text" placeholder="Email" asp-for=" Email"/>
                     </div>
                     <span id="email-error" class="error-message"></span>
                     <br>
