--- a/Gym Web Application/Gym Web Application/Views/Packages/AddPackages.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Packages/AddPackages.cshtml
@@ -1,3 +1,4 @@
+@model Gym_Web_Application.Models.PackageModel
 @{
     ViewData["Title"] = "Packages";
 }
@@ -9,11 +10,11 @@
                 <h1>Add a Package</h1>
                 <form class="add-package" method="POST" onsubmit="return validateForm()">
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Package Title" id="title">
+                        <input class="add-user-input" type="text" placeholder="Package Title" id="title" asp-for="Title">
                     </div>
                     <span class="error" id="titleError"></span><br>
                     <div>
-                        <input class="add-user-input" type="number" placeholder="Number of Months" id="numOfMonths">
+                        <input class="add-user-input" type="number" placeholder="Number of Months" id="numOfMonths" asp-for="NumOfMonths">
                     </div>
                     <span class="error" id="numOfMonthsError"></span><br>
 
@@ -21,37 +22,37 @@
                         <div class="visits-title">Visits:</div>
                         <div class="radio-buttons">
                             <input type="radio" id="limitedRadio" name="visits" value="limited" class="radio-btn"
-                                onclick="showLimitField()">
+                                onclick="showLimitField()" >
                             <label for="limitedRadio">Limited</label>
 
                             <input type="radio" id="unlimitedRadio" name="visits" value="unlimited" class="radio-btn"
-                                onclick="hideLimitField()">
+                                onclick="hideLimitField()" >
                             <label for="unlimitedRadio">Unlimited</label>
                         </div>
 
                         <div id="limitField" class="hidden" style="display:none;">
                             <input class="add-user-input" type="number" placeholder="Limit (Days)" value=""
-                                id="visitsLimit">
+                                id="visitsLimit" asp-for="VisitsLimit">
                         </div>
                     </div>
                     <span class="error" id="visitsLimitError"></span><br>
 
                     <div>
-                        <input class="add-user-input" type="number" placeholder="Freeze Limit (Days)" id="freezeLimit">
+                        <input class="add-user-input" type="number" placeholder="Freeze Limit (Days)" id="freezeLimit" asp-for="FreezeLimit">
                     </div><span class="error" id="freezeLimitError"></span><br>
                     <div><input class="add-user-input" type="number" placeholder="Number of Invitations"
-                            id="numOfInvitations">
+                            id="numOfInvitations" asp-for="NumOfInvitations">
                     </div><span class="error" id="numOfInvitationsError"></span><br>
                     <div><input class="add-user-input" type="number" placeholder="Number of Inbody Sessions"
-                            id="numOfInbodySessions">
+                            id="numOfInbodySessions" asp-for="NumOfInbodySessions">
                     </div><span class="error" id="numOfInbodySessionsError"></span><br>
                     <div><input class="add-user-input" type="number" placeholder="Number of PT Sessions"
-                            id="numOfPTSessions">
+                            id="numOfPTSessions" asp-for="NumOfPrivateTrainingSessions">
                     </div><span class="error" id="numOfPTSessionsError"></span><br>
-                    <div><input class="add-user-input" type="number" placeholder="Price" id="price">
+                    <div><input class="add-user-input" type="number" placeholder="Price" id="price" asp-for="Price">
                     </div><span class="error" id="priceError"></span><br>
 
-                    <input type="hidden" name="isActivated" value="Activated">
+                    <input type="hidden" name="isActivated" value="Activated" asp-for="IsActivated">
                     <br>
                     <button class="btn btn-add-form" type="submit">Add Package</button>
                 </form>
