--- a/Gym Web Application/Gym Web Application/Views/Packages/ViewPackages.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Packages/ViewPackages.cshtml
@@ -1,3 +1,4 @@
+@model List<Gym_Web_Application.Models.PackageModel>
 @{
     ViewData["Title"] = "Packages";
 }
@@ -8,46 +9,40 @@
             <h1 class="centeredHeader">Available Packages <div class="">
                     <a class="btn-add" asp-controller="Packages" asp-action="AddPackages">Add Package</a>
             </h1>
-            <div class="packageContainer">
+            @foreach(var package in Model)
+            {
+               <div class="packageContainer">
                 <div class="packageBox">
-                    <h3>1 MONTH</h3>
+                    <h3>@package.Title</h3>
                     <div class="packageContent">
                         <div class="packageText">
-                            <p> <span>Visits Limited</span></p>
-                            <p> <span>20 Visits</span></p>
-                            <p> <span>2 Invitations</span></p>
-                            <p> <span>1 Inbody Session</span></p>
-                            <p> <span>1 Private Training Session</span></p>
+                            <p> <span>@package.NumOfMonths</span></p>
+                            <p> <span>Visits Limit: @package.VisitsLimit</span></p>
+                            <p> <span>Invitations: @package.NumOfInvitations </span></p>
+                            <p> <span>Inbody Session: @package.NumOfInbodySessions</span></p>
+                            <p> <span>Private Training Session: @package.NumOfPrivateTrainingSessions</span></p>
                             <p>
-                                <bold>For: <span>700 L.E</span></bold>
+                                <bold>For: <span>@package.Price</span></bold>
                             </p>
 
                             <!-- Check if package is activated -->
-                            <button class="btn-package">Deactivate</button>
-                            @* <button class="btn-package">Activate</button> *@
-                        </div>
-                    </div>
-                </div>
-                <div class="packageBox">
-                    <h3>2 MONTHS</h3>
-                    <div class="packageContent">
-                        <div class="packageText">
-                            <p> <span>Visits Limited</span></p>
-                            <p> <span>40 Visits</span></p>
-                            <p> <span>3 Invitations</span></p>
-                            <p> <span>2 Inbody Session</span></p>
-                            <p> <span>2 Private Training Session</span></p>
-                            <p>
-                                <bold>For: <span>1200 L.E</span></bold>
-                            </p>
+                            @if(package.IsActivated=="Activated")
+                            {
+                                <button class="btn-package">Deactivate</button> 
+                            }
+                            else
+                            {
+                                <button class="btn-package">Activate</button>
+                            }
 
-                            <!-- Check if package is activated -->
-                            <button class="btn-package">Deactivate</button>
-                            @* <button class="btn-package">Activate</button> *@
+                              
                         </div>
                     </div>
                 </div>
-            </div>
+               </div>
+            }
+            
+
         </div>
     </div>
 </div>
