Updated view clients html.

--- a/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Clients/ViewClients.cshtml
@@ -43,7 +43,7 @@
                                     @client.ID
                                 </th>
                                 <td>
-                                    @client.FirstName + " " + @client.LastName
+                                    @($"{client.FirstName} {client.LastName}")
                                 </td>
                                 <td>
                                     @client.Email
