--- a/Gym Web Application/Gym Web Application/Views/Clients/EditClients.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Clients/EditClients.cshtml
@@ -10,22 +10,22 @@
                 <h1>Edit a Client</h1>
                 <form method="POST" class="EditClients">
                     <div>
-                        <input class="add-user-input" type="text" placeholder="First Name" name="FirstName" asp-for="FirstName"/>
+                        <input class="add-user-input" type="text" placeholder="First Name" asp-for="FirstName"/>
                     </div>
                     <span id="fname-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Last Name" name="LastName" asp-for="LastName"/>
+                        <input class="add-user-input" type="text" placeholder="Last Name" asp-for="LastName"/>
                     </div>
                     <span id="lname-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Phone Number" name="PhoneNumber" asp-for="PhoneNumber"/>
+                        <input class="add-user-input" type="text" placeholder="Phone Number" asp-for="PhoneNumber"/>
                     </div>
                     <span id="phoneno-error" class="error-message"></span>
                     <br>
                     <div>
-                        <input class="add-user-input" type="text" placeholder="Email" name="Email" asp-for=" Email"/>
+                        <input class="add-user-input" type="text" placeholder="Email" asp-for=" Email"/>
                     </div>
                     <span id="email-error" class="error-message"></span>
                     <br>
@@ -35,16 +35,3 @@
         </div>
     </div>
 </div>
-</div>
-<script>
-    window.addEventListener('DOMContentLoaded', (event) => {
-        clearInputFields();
-    });
-
-    function clearInputFields() {
-        var inputFields = document.querySelectorAll('.add-user-input');
-        inputFields.forEach(function (input) {
-            input.value = '';
-        });
-    }
-</script>
