Added slight change to view packages html file.

--- a/Gym Web Application/Gym Web Application/Views/Packages/ViewPackages.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Packages/ViewPackages.cshtml
@@ -18,7 +18,7 @@
                     <h3>@package.Title</h3>
                     <div class="packageContent">
                         <div class="packageText">
-                            <p> <span>@package.NumOfMonths</span></p>
+                            <p> <span>@package.NumOfMonths Months</span></p>
                             <p> <span>Visits Limit: @package.VisitsLimit</span></p>
                             <p> <span>Invitations: @package.NumOfInvitations </span></p>
                             <p> <span>Inbody Session: @package.NumOfInbodySessions</span></p>
