--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -147,6 +147,7 @@
         src="https://rawcdn.githack.com/Loopple/loopple-public-assets/5cef8f62939eeb089fa26d4c53a49198de421e3d/argon-dashboard/js/vendor/chart.extension.js"></script>
     <script
         src="https://rawcdn.githack.com/Loopple/loopple-public-assets/7bb803d2af2ab6d71d429b0cb459c24a4cd0fbb4/argon-dashboard/js/argon.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
