--- a/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
+++ b/Gym Web Application/Gym Web Application/Views/Shared/_AdminSide&NavBar.cshtml
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" asp-controller="Reports" asp-action="Reports">
+                    <a class="nav-link" asp-controller="SalesReport" asp-action="ViewSalesReport">
                         <i class="fa fa-desktop"></i>
                         <span class="nav-link-text">Reports</span>
                     </a>
